# BeLLMira

./: .dockerignore  .gitignore  Modelfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: aibrix.ipynb  deploy_model.ipynb  deploy_new_model_lab.ipynb  evaluate_dv_in_qa.ipynb  exp_context_length_results.csv  query_model.ipynb  test_model_modalities.ipynb
notebooks/bank_models/: evaluate_dv_in_qa.ipynb  query_model.ipynb
src/bellmira/evaluators/: __init__.py  evaluator_interface.py  model_classification_evaluator.py  model_concurrent_load_evaluator.py  model_context_length_evaluator.py  model_embedding_quality_evaluator.py  model_regression_evaluator.py  model_summarization_evaluator.py  model_ttft_evaluator.py  model_vision_evaluator.py
src/bellmira/llm_experiments/: experiments.py
src/bellmira/llm_model/: __init__.py  llm_model.py  llm_model_client.py
src/bellmira/utils/: __init__.py  context_utils.py  dict_logger.py  metrics_utils.py  text_metrics.py
test/test1/: test2.json
tmp/bellmira_tutorial/: classification_sample.parquet
tutorial/: 01_context_length_evaluator.ipynb  02_concurrent_load_evaluator.ipynb  03_classification_evaluator.ipynb  04_vision_evaluator.ipynb  05_ttft_evaluator.ipynb  06_embedding_quality_evaluator.ipynb  07_summarization_evaluator.ipynb  08_regression_evaluator.ipynb  concurrent_load_results.csv  context_length_results.csv
tutorial/mlruns/0/: meta.yaml
tutorial/mlruns/384502637014023769/: meta.yaml
tutorial/mlruns/384502637014023769/30c921d317584f03b8e349bfecfa2c59/: meta.yaml
tutorial/mlruns/384502637014023769/30c921d317584f03b8e349bfecfa2c59/metrics/: Accuracy  Avg_Completion_Tokens  Avg_Execution_Time  Avg_Prompt_Tokens  Macro-F1
tutorial/mlruns/384502637014023769/30c921d317584f03b8e349bfecfa2c59/params/: model_url
tutorial/mlruns/384502637014023769/30c921d317584f03b8e349bfecfa2c59/tags/: mlflow.runName  mlflow.source.name
