[tool.poetry]
name = "bellmira"
version = "1.0.1"
description = ""
authors = ["Luis Neto"]
readme = "README.md"
packages = [{ include = "bellmira", from = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
vllm = "0.9.2"
numpy = "1.26.4"
mlflow = "3.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"