[tool.poetry]
name = "bellmira"
version = "1.0.1"
description = ""
authors = ["Luis Neto"]
readme = "README.md"
packages = [{ include = "bellmira", from = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
vllm = {version = "0.19.0", markers = "sys_platform == 'linux'"}
numpy = ">=2.0.0"
mlflow = "3.3.2"
transformers = "4.57.6"
uvloop = {version = "0.22.1", markers = "sys_platform == 'linux'"}
pydantic-extra-types = ">=2.10.5,!=2.11.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyter-server = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"